	specifications.

    o	read.fwf() reads multiline records, is faster for large files.

    o	readChar() can now read strings with embedded nuls.

    o	reorder.dendrogram() now has a 'agglo.FUN' argument for
	specification of a weights agglomeration function.

    o	Replaying a plot (with replayPlot() or via autoprinting) now
	automagically opens a device if none is open.

    o	reshape() can handle multiple 'id' variables.

    o	source() with 'echo = TRUE' uses the function source attribute
	when displaying commands as they are parsed.

    o	str(obj) now displays more reasonably the STRucture of S4 objects.
	The method for class "dendrogram" has a new argument 'stem' and
	indicates when it's not printing all levels (as typically when
	e.g., 'max.level = 2').

    o	system.time() has a new argument 'gcFirst' which, when TRUE,
	forces a garbage collection before timing begins.

    o	tail() of a matrix now displays the original row numbers.

    o	There is now a replacement method for window(), to allow a
	range of values of time series to be replaced by specifying the
	start and end times (and optionally a frequency).

    o	The screen devices x11(), windows() and quartz() have a new
	argument 'bg' to set the default background colour.

    o	The way the comparison operators handle a list argument has
	been rationalized so a few more cases will now work -- see
	?Comparison.

    o	Indexing a vector by a character vector was slow if both the
	vector and index were long (say 10,000).  Now hashing is used
	and the time should be linear in the longer of the lengths
	(but more memory is used).

    o	Printing a character string with embedded nuls now prints the
	whole string, and non-printable characters are represented by
	octal escape sequences.


UTILITIES

    o	Package 'utils' now contains a much improved citation() function
	which also has a package argument.  By default the citation is
	auto-generated from the package DESCRIPTION, the file